2026-01-30T01:13:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21500764809 # 862
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-30
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 70 114 / 71 115
* notice: next accum: outdated-unq outdated-all / unq all: 70 114 / 71 115
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-14] / []

2026-01-29T01:13:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21461767199 # 861
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-29
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 70 114 / 70 114
* notice: next accum: outdated-unq outdated-all / unq all: 70 114 / 71 115
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-12-16 2025-12-17 2025-12-18 2025-12-19 2025-12-20 2025-12-21 2025-12-22 2025-12-23 2025-12-24 2025-12-25 2025-12-26 2025-12-27 2025-12-28 2025-12-29] / [2026-01-23]

2025-12-31T01:12:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20609571499 # 855
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-31
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 69 113 / 70 114
* notice: next accum: outdated-unq outdated-all / unq all: 70 114 / 70 114
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-12] / []
