@@ -3,11 +3,6 @@
   "uniques": 1,
   "views": [
     {
-      "timestamp": "2026-01-15T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
       "timestamp": "2026-01-16T00:00:00Z",
       "count": 0,
       "uniques": 0
@@ -69,6 +64,11 @@
     },
     {
       "timestamp": "2026-01-28T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-01-29T00:00:00Z",
       "count": 0,
       "uniques": 0
     }
